tests/NormalTests/paczka1/fuzzy1/50998298.err
Error in line 3: S94 S184 77,4
Error in line 15: XPjG5ELvR S415 78,0
Error in line 14: ODV2pPIyRdu S94 47,8
Error in line 5: fAeyqFzbhtF A884 13,3
Error in line 25: fAeyqFzbhtF S415 80,0
